--- a/lib/serverupdate.ui
+++ b/lib/serverupdate.ui
@@ -81,13 +81,17 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset theme="edit-undo"/>
+      <iconset theme="edit-undo">
+       <normaloff>.</normaloff>.</iconset>
      </property>
      <property name="autoRepeatInterval">
       <number>100</number>
      </property>
+     <property name="toolButtonStyle">
+      <enum>Qt::ToolButtonFollowStyle</enum>
+     </property>
      <property name="arrowType">
-      <enum>Qt::LeftArrow</enum>
+      <enum>Qt::NoArrow</enum>
      </property>
     </widget>
    </item>
