--- a/lib/serverupdate.ui
+++ b/lib/serverupdate.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>737</width>
+    <width>620</width>
     <height>459</height>
    </rect>
   </property>
@@ -14,16 +14,35 @@
    <string>Update Manager</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="3">
-    <widget class="QPushButton" name="refreshButton">
-     <property name="font">
-      <font>
-       <family>Microsoft YaHei</family>
-       <pointsize>12</pointsize>
-      </font>
+   <item row="0" column="0">
+    <widget class="QToolButton" name="toolButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>2</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="whatsThis">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Go back&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhNone</set>
      </property>
      <property name="text">
-      <string>Refresh</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset theme="edit-undo">
+       <normaloff>.</normaloff>.</iconset>
+     </property>
+     <property name="autoRepeatInterval">
+      <number>100</number>
+     </property>
+     <property name="toolButtonStyle">
+      <enum>Qt::ToolButtonFollowStyle</enum>
+     </property>
+     <property name="arrowType">
+      <enum>Qt::NoArrow</enum>
      </property>
     </widget>
    </item>
@@ -69,34 +88,27 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QToolButton" name="toolButton">
-     <property name="whatsThis">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Go back&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="inputMethodHints">
-      <set>Qt::ImhNone</set>
+   <item row="0" column="3">
+    <widget class="QPushButton" name="refreshButton">
+     <property name="font">
+      <font>
+       <family>Microsoft YaHei</family>
+       <pointsize>12</pointsize>
+      </font>
      </property>
      <property name="text">
-      <string/>
-     </property>
-     <property name="icon">
-      <iconset theme="edit-undo">
-       <normaloff>.</normaloff>.</iconset>
-     </property>
-     <property name="autoRepeatInterval">
-      <number>100</number>
-     </property>
-     <property name="toolButtonStyle">
-      <enum>Qt::ToolButtonFollowStyle</enum>
-     </property>
-     <property name="arrowType">
-      <enum>Qt::NoArrow</enum>
+      <string>Refresh</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0" colspan="5">
     <widget class="QTableWidget" name="tableWidget">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>2</verstretch>
+      </sizepolicy>
+     </property>
      <property name="font">
       <font>
        <family>Microsoft YaHei</family>
@@ -133,6 +145,22 @@
        <string>Update</string>
       </property>
      </column>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="5">
+    <widget class="QTextBrowser" name="debugBrowser">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>1</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>100</height>
+      </size>
+     </property>
     </widget>
    </item>
   </layout>
