--- a/lib/reserve/settingsdialog.ui
+++ b/lib/reserve/settingsdialog.ui
@@ -84,7 +84,7 @@
       </font>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabArchive">
       <property name="font">
@@ -240,7 +240,7 @@
          <item>
           <spacer name="horizontalSpacer_2">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -328,7 +328,7 @@
        </font>
       </property>
       <attribute name="title">
-       <string>Update</string>
+       <string>Copy</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="1" column="1">
