Finally made multithreading, and now refresh function is broken. QoL changes, refresh() WIP

--- a/lib/serverupdate.ui
+++ b/lib/serverupdate.ui
@@ -35,7 +35,7 @@
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Import IP list&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Change user&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="whatsThis">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Go back&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
