--- a/progressdialog.ui
+++ b/progressdialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Operation in progress...</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -32,10 +32,10 @@
       </size>
      </property>
      <property name="maximum">
-      <number>100</number>
+      <number>8</number>
      </property>
      <property name="value">
-      <number>12</number>
+      <number>8</number>
      </property>
      <property name="textVisible">
       <bool>true</bool>
@@ -50,12 +50,9 @@
       <enum>QProgressBar::TopToBottom</enum>
      </property>
      <property name="format">
-      <string>%p / %m</string>
+      <string>%v / %m</string>
      </property>
     </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QTextBrowser" name="debugBrowser"/>
    </item>
    <item row="2" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -73,6 +70,9 @@
      </property>
      <item>
       <widget class="QPushButton" name="exportButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>200</width>
@@ -86,6 +86,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="closeButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximumSize">
         <size>
          <width>200</width>
@@ -98,6 +101,9 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="1" column="0">
+    <widget class="QTextBrowser" name="debugBrowser"/>
    </item>
   </layout>
  </widget>
