--- a/progressdialog.ui
+++ b/progressdialog.ui
@@ -16,6 +16,9 @@
   <property name="windowTitle">
    <string>Operation in progress...</string>
   </property>
+  <property name="modal">
+   <bool>false</bool>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QProgressBar" name="progressBar">
