--- a/confirmation.ui
+++ b/confirmation.ui
@@ -49,7 +49,11 @@
     </widget>
    </item>
    <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="login"/>
+    <widget class="QLineEdit" name="login">
+     <property name="focusPolicy">
+      <enum>Qt::StrongFocus</enum>
+     </property>
+    </widget>
    </item>
    <item row="4" column="1" colspan="2">
     <widget class="QLabel" name="errorLabel">
@@ -60,6 +64,9 @@
    </item>
    <item row="6" column="2">
     <widget class="QCheckBox" name="checkDrug">
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
      <property name="text">
       <string>Close drug.exe</string>
      </property>
@@ -120,7 +127,11 @@
     </layout>
    </item>
    <item row="0" column="0" rowspan="14">
-    <widget class="QListWidget" name="ipListWidget"/>
+    <widget class="QListWidget" name="ipListWidget">
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
+     </property>
+    </widget>
    </item>
    <item row="7" column="1">
     <widget class="QCheckBox" name="checkArchive">
@@ -159,12 +170,18 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QToolButton" name="toolButton">
        <property name="enabled">
         <bool>false</bool>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
         <string>...</string>
@@ -175,6 +192,9 @@
       <widget class="QToolButton" name="toolButton_2">
        <property name="enabled">
         <bool>false</bool>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
         <string>...</string>
@@ -206,10 +226,17 @@
    <item row="11" column="1" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QLineEdit" name="sourcePath"/>
+      <widget class="QLineEdit" name="sourcePath">
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QToolButton" name="openButton">
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
