--- a/confirmation.ui
+++ b/confirmation.ui
@@ -14,7 +14,9 @@
    <string>Operation preview</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QLineEdit {
+	background-color: white;
+}</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>false</bool>
@@ -73,15 +75,21 @@
     </widget>
    </item>
    <item row="6" column="1">
-    <widget class="QCheckBox" name="checkReserve">
+    <widget class="QCheckBox" name="checkSubfolders">
      <property name="enabled">
       <bool>false</bool>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::ClickFocus</enum>
      </property>
      <property name="layoutDirection">
       <enum>Qt::RightToLeft</enum>
      </property>
      <property name="text">
-      <string>Reserve</string>
+      <string>Subfolders</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
@@ -166,38 +174,38 @@
    <item row="9" column="1" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="targetLineEdit">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
+        <enum>Qt::ClickFocus</enum>
+       </property>
+       <property name="text">
+        <string>d$\DRUG\Users</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="toolButton">
+      <widget class="QToolButton" name="resetTargetButton">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
-       <property name="text">
-        <string>...</string>
+       <property name="toolTip">
+        <string>Reset to default</string>
        </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QToolButton" name="toolButton_2">
-       <property name="enabled">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="icons.qrc">
+         <normaloff>:/buttons/icon/rotate-left.svg</normaloff>:/buttons/icon/rotate-left.svg</iconset>
+       </property>
+       <property name="checkable">
         <bool>false</bool>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>...</string>
        </property>
       </widget>
      </item>
@@ -246,6 +254,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
